<resources>
    <string name="app_name">被窝资讯</string>

    <!--个人中心-->
    <string name="nigt_mode">夜间模式</string>
    <string name="daytime_mode">日间模式</string>
    <string name="font_mode">文字模式</string>
    <string name="picture_mode">图片模式</string>
    <string name="my_discuss">我的评论</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_idea">意见反馈</string>
    <string name="check_update">检查更新</string>
    <string name="sign_out">退出登录</string>
    <string name="login_now">点击登录</string>
    <string name="hint_user">匿名用户</string>

    <!--登录界面-->
    <string name="hint_user_name">用户名</string>
    <string name="hint_password">密码</string>
    <string name="login">登录</string>
    <string name="choose_more_login_way">还可以选择以下方式直接登录</string>
    <string name="qq_login">使用QQ登录</string>
    <string name="we_chat_login">使用微信登录</string>
    <string name="we_bo_login">使用微博登录</string>
    <string name="no_account">没有被窝账号？</string>
    <string name="sign_up_one_now">立即注册一个</string>

    <!--注册界面-->
    <string name="hint_e_mail">邮箱</string>
    <string name="sign_up_now">立即注册</string>
    <string name="more_way_login">您可以选择以下方式直接登录</string>
    <string name="sign_up">注册</string>
    <string name="guide">让我们开始吧</string>

</resources>
