<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.xushuzhan.quiltnews.ui.activity.SignUpActivity">
    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar_sign_up"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        />


    <android.support.v7.widget.CardView
        android:id="@+id/ca1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/toolbar_sign_up"
        android:layout_margin="20dp"
        android:background="@color/card_view_color"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/sign_up_user"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/pic_user"
                    android:layout_marginBottom="12dp"
                    android:layout_alignBottom="@+id/ti_sign_up_account"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ti_sign_up_account"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/sign_up_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorTextHint"
                    >
                    <EditText
                        android:id="@+id/sign_up_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_e_mail"
                        android:singleLine="true"
                        />
                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/pic_sign_up_password"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/pic_password"
                    android:layout_marginBottom="12dp"
                    android:layout_alignBottom="@+id/iv_sign_up_password"
                    android:layout_toLeftOf="@+id/iv_sign_up_password"
                    android:layout_toStartOf="@+id/iv_sign_up_password" />
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/iv_sign_up_password"
                    android:layout_marginLeft="5dp"
                    android:layout_below="@+id/ti_sign_up_account"
                    android:layout_toRightOf="@+id/sign_up_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorTextHint"
                    >
                    <EditText
                        android:id="@+id/sign_up_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

        </ScrollView>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_sign_up"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/ca1"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="15dp"
        android:clickable="true"
        >
        <RelativeLayout
            android:id="@+id/sign_up_now"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/card_view_color"
            android:clickable="true"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_now"
                style="@style/Text_Content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>
    <TextView
        android:id="@+id/textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/more_way_login"
        android:textColor="@color/colorTextHint"
        android:layout_below="@+id/cv_sign_up"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="50dp"
        />

    <android.support.v7.widget.CardView
        android:id="@+id/cv3"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_below="@+id/textview"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:background="@color/card_view_color"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"

            >
            <RelativeLayout
                android:id="@+id/rl_qq_login_sign_up"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/qq_p"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:src="@drawable/qq"
                    android:scaleType="fitCenter"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qq_login"
                    android:textColor="@color/text_color_primary"
                    android:id="@+id/qq_t"
                    android:layout_below="@+id/qq_p"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/we_bo_p"
                    android:padding="5dp"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:src="@drawable/we_bo"
                    android:scaleType="fitCenter"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/we_bo_login"
                    style="@style/Text_Content"
                    android:id="@+id/qwe_bo_t"
                    android:layout_below="@+id/we_bo_p"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:padding="6dp"
                    android:id="@+id/we_chat_p"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:src="@drawable/we_chat"
                    android:scaleType="fitCenter"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/we_chat_login"
                    style="@style/Text_Content"
                    android:id="@+id/we_chat_t"
                    android:layout_below="@+id/we_chat_p"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
